installed django-pagedown

--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -1,23 +1,8 @@
-appdirs==1.4.0
-beautifulsoup4==4.5.3
-boto==2.42.0
-Django==1.10.5
-django-modelcluster==2.0
-django-storages==1.5.1
-django-taggit==0.18.3
-django-treebeard==4.1.0
-djangorestframework==3.5.3
-gunicorn==19.6.0
-html5lib==0.999999999
+appdirs==1.4.3
+Django==1.10.6
+django-pagedown==0.1.1
 olefile==0.44
 packaging==16.8
 Pillow==4.0.0
-PyMySQL==0.7.9
-pyparsing==2.1.10
-pytz==2016.10
-requests==2.13.0
+pyparsing==2.2.0
 six==1.10.0
-Unidecode==0.4.20
-wagtail==1.8.1
-webencodings==0.5
-Willow==0.4
