--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -1,6 +1,8 @@
 appdirs==1.4.3
 Django==1.10.6
+django-markdown-deux==1.0.5
 django-pagedown==0.1.1
+markdown2==2.3.3
 olefile==0.44
 packaging==16.8
 Pillow==4.0.0
